Search in /usr/local/sbin:/usr/sbin as fallback

Utilities such as lspci default to /usr/(local/)sbin/ as install location,
but that's not in $PATH for regular user sessions. It still works without
supeuser privileges, so just look there as well as a fallback.

BUG: 449792