src/CommandOutputContext.cpp
@@ -19,6 +19,11 @@ CommandOutputContext::CommandOutputContext(const QString &executable, const QStr
     , m_executablePath(QStandardPaths::findExecutable(m_executableName))
     , m_arguments(arguments)
 {
+    // Various utilities are installed in sbin, but work without elevated privileges
+    if (m_executablePath.isEmpty() {
+        m_executablePath = QStandardPaths::findExecutable(m_executableName, {QStringLiteral("/usr/local/sbin"), QStringLiteral("/usr/sbin")});
+    }
+
     metaObject()->invokeMethod(this, &CommandOutputContext::load);
 }
 
